force-app/main/default/objects/Brand_Experience__c/Brand_Experience__c.object-meta.xml
<CustomObject>
    <description>Object to create Brand Experiences. Parent object of Experience Variation (Brand_Experience_Variation__c)</description>
    <label>Events &amp; Experience</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events &amp; Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>