force-app/main/default/objects/Brand_Experience__c/fields/Club_Season__c.field-meta.xml
<CustomField>
    <fullName>Club_Season__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Club Season</description>
    <label>Club Season</label>
    <referenceTo>Club_Season__c</referenceTo>
    <relationshipName>Brand_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>