force-app/main/default/objects/Brand_Experience__c/fields/ClubName__c.field-meta.xml
<CustomField>
    <fullName>ClubName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Club associated with the Experience</description>
    <label>Club</label>
    <referenceTo>Club_and_Seasons__c</referenceTo>
    <relationshipName>Brand_Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>