force-app/main/default/objects/Brand_Experience__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>this field is used for the description of an Experience</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>