force-app/main/default/objects/Brand_Experience__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Maximum end date of child Experience Variation</description>
    <inlineHelpText>Calculated : Child Variation latest End Date</inlineHelpText>
    <label>Experience End Date</label>
    <summarizedField>Brand_Experience_Variation__c.EndDateTime__c</summarizedField>
    <summaryForeignKey>Brand_Experience_Variation__c.Brand_Experience__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>