force-app/main/default/objects/Brand_Experience__c/fields/Experience_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Experience_EndDate__c</fullName>
    <description>Use to determinate the range date of an Experience (typically used for event experience)</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>