force-app/main/default/objects/Brand_Experience__c/fields/Global_Nb_Confirmed_Clients__c.field-meta.xml
<CustomField>
    <fullName>Global_Nb_Confirmed_Clients__c</fullName>
    <label>Global Client Confirmed Number</label>
    <summarizedField>Brand_Experience_Variation__c.Nb_Confirmed_Clients__c</summarizedField>
    <summaryForeignKey>Brand_Experience_Variation__c.Brand_Experience__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>