force-app/main/default/objects/Brand_Experience__c/fields/MinimunVariationEndDate__c.field-meta.xml
<CustomField>
    <fullName>MinimunVariationEndDate__c</fullName>
    <description>This Field display the minimum end date of the Variations</description>
    <label>Minimun Variation End Date</label>
    <summarizedField>Brand_Experience_Variation__c.EndDateTime__c</summarizedField>
    <summaryForeignKey>Brand_Experience_Variation__c.Brand_Experience__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>