force-app/main/default/objects/Brand_Experience__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Functional Reference for the Experience

- EXP[Base number+1] 
- Minimum base number : 000001
- 6 chiffres (ex. EXP000001)</description>
    <displayFormat>EXP{000000}</displayFormat>
    <label>Experience Reference</label>
    <type>AutoNumber</type>
</CustomField>