force-app/main/default/objects/Brand_Experience__c/fields/Size_Of_Variations__c.field-meta.xml
<CustomField>
    <fullName>Size_Of_Variations__c</fullName>
    <label>Number of Activations</label>
    <summaryForeignKey>Brand_Experience_Variation__c.Brand_Experience__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>