force-app/main/default/objects/Brand_Experience__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Minimum start date of child Experience Variation</description>
    <inlineHelpText>Calculated : Child Variation earliest Start Date</inlineHelpText>
    <label>Experience Start Date</label>
    <summarizedField>Brand_Experience_Variation__c.StartDateTime__c</summarizedField>
    <summaryForeignKey>Brand_Experience_Variation__c.Brand_Experience__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>