force-app/main/default/objects/Brand_Experience__c/fields/Variation_Passed__c.field-meta.xml
<CustomField>
    <fullName>Variation_Passed__c</fullName>
    <description>Return TRUE if a variation already done</description>
    <formula>MinimunVariationEndDate__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variation Passed</label>
    <type>Checkbox</type>
</CustomField>