force-app/main/default/objects/Brand_Experience__c/recordTypes/Club_Experience.recordType-meta.xml
<RecordType>
    <fullName>Club_Experience</fullName>
    <active>true</active>
    <description>used to create Experiences assigned to a Club</description>
    <label>Club Experience</label>
</RecordType>