force-app/main/default/objects/Brand_Experience__c/recordTypes/Experience.recordType-meta.xml
<RecordType>
    <fullName>Experience</fullName>
    <active>true</active>
    <description>used to create Experiences</description>
    <label>Experience</label>
</RecordType>